add jpa configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-message=test property!
+jdbc.driverClassName=org.postgresql.Driver
+jdbc.url=jdbc:postgresql://localhost:5432/${db.name}
+jdbc.username=user
+jdbc.password=pass
+
+db.name=bookmarks
+
+hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialectect 
+hibernate.show_sql=true
+
+javax.persistence.schema-generation.database.action=create
+javax.persistence.schema-generation.create-script-source=schema.sql
+
